--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -315,6 +315,7 @@
     <string name="X_lbl_clear_filters">Effacer les filtres</string>
     <string name="lbl_clone_style">Cloner le style</string>
     <string name="lbl_book_type_collection">Collection</string>
+    <string name="lbl_ebook_file_type">Type de fichier eBook</string>
     <string name="lbl_color">Couleur</string>
     <string name="lbl_condition">État</string>
     <string name="lbl_condition_dust_cover_missing_or_bad">Disparu/acceptable</string>
@@ -606,6 +607,9 @@
     <string name="ps_show_titles_reordered_on">titre, Le</string>
     <string name="pt_sort_author_name_given_first">Tri par nom d’auteur</string>
     <string name="pt_sort_title_reordered">Trier les titres par</string>
+    <string name="pt_cover_undo_enabled">Annulation des opérations sur les couvertures de livres</string>
+    <string name="ps_cover_undo_disabled">L’édition/le remplacement d’une couverture ne peut pas être annulé(e) (moins d’espace de stockage)</string>
+    <string name="ps_cover_undo_enabled">L’édition/le remplacement d’une couverture peut être annulé(e) (utilise plus d’espace de stockage)</string>
     <string name="pt_thumbnails_cache_resized">Mettre les couvertures en cache</string>
     <string name="pt_thumbnails_rotate_auto">Faire pivoter les images</string>
     <string name="pt_ui_language">Langue</string>
@@ -765,4 +769,6 @@
     <string name="info_books_deleted">Livres supprimés : %1$d</string>
     <string name="progress_msg_x_deleted">%1$d supprimé</string>
     <string name="action_undo">Annuler</string>
+    <string name="info_nothing_to_do">Rien à faire.</string>
+    <string name="option_restore_cover">Restaurer l’image précédente</string>
 </resources>
