--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -330,6 +330,7 @@
     <string name="X_lbl_clear_filters">Wyczyść filtry</string>
     <string name="lbl_clone_style">Duplikat stylu</string>
     <string name="lbl_book_type_collection">Kolekcja</string>
+    <string name="lbl_ebook_file_type">Typ pliku eBook</string>
     <string name="lbl_color">Kolor</string>
     <string name="lbl_condition">Stan</string>
     <string name="lbl_condition_dust_cover_missing_or_bad">Brakujący/zadowalający</string>
@@ -618,6 +619,9 @@
     <string name="pt_show_title_reordered">Pokaż tytuły jako…</string>
     <string name="pt_sort_author_name_given_first">Sortowanie nazwisk autorów</string>
     <string name="pt_sort_title_reordered">Sortuj tytuły według</string>
+    <string name="pt_cover_undo_enabled">Cofanie operacji na okładkach książek</string>
+    <string name="ps_cover_undo_disabled">Edycji/zmiany okładki nie można cofnąć (zużywa mniej pamięci)</string>
+    <string name="ps_cover_undo_enabled">Edycję/zamianę okładki można cofnąć (zużywa więcej miejsca)</string>
     <string name="pt_thumbnails_cache_resized">Zmienione obrazy są buforowane</string>
     <string name="pt_thumbnails_rotate_auto">Obracaj zdjęcia</string>
     <string name="pt_ui_language">Język</string>
@@ -777,4 +781,6 @@
     <string name="info_books_deleted">Książki usunięte: %1$d</string>
     <string name="progress_msg_x_deleted">%1$d usunięty</string>
     <string name="action_undo">Cofnij</string>
+    <string name="info_nothing_to_do">Nic do zrobienia.</string>
+    <string name="option_restore_cover">Przywróć poprzedni obraz</string>
 </resources>
