--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -768,4 +768,5 @@
     <string name="action_undo">Αναίρεση</string>
     <string name="info_nothing_to_do">Δεν χρειάζεται να κάνετε τίποτα.</string>
     <string name="option_restore_cover">Επαναφορά προηγούμενης εικόνας</string>
+    <string name="info_site_list">Οι αναζητήσεις περιορίζονται σε: %1$s</string>
 </resources>
