--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -779,4 +779,5 @@
     <string name="action_undo">Vrátit zpět</string>
     <string name="info_nothing_to_do">Nic nedělat.</string>
     <string name="option_restore_cover">Obnovit předchozí obrázek</string>
+    <string name="info_site_list">Vyhledávání je omezeno na: %1$s</string>
 </resources>
