--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -768,4 +768,5 @@
     <string name="info_nothing_to_do">Niets te doen.</string>
     <string name="option_restore_cover">Vorige afbeelding herstellen</string>
     <string name="info_site_list">Zoekopdrachten zijn beperkt tot: %1$s</string>
+    <string name="tip_configure_sites">Afzonderlijke websites kunnen worden geconfigureerd met het instellingen-pictogram bovenaan het scherm.</string>
 </resources>
