--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -781,4 +781,5 @@
     <string name="info_nothing_to_do">Ничего не делать.</string>
     <string name="option_restore_cover">Восстановить предыдущее изображение</string>
     <string name="info_site_list">Поиск ограничен: %1$s</string>
+    <string name="tip_configure_sites">Отдельные сайты могут быть настроены с помощью значка настроек в верхней части экрана.</string>
 </resources>
