--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -780,4 +780,5 @@
     <string name="info_nothing_to_do">Nic nedělat.</string>
     <string name="option_restore_cover">Obnovit předchozí obrázek</string>
     <string name="info_site_list">Vyhledávání je omezeno na: %1$s</string>
+    <string name="tip_configure_sites">Jednotlivé webové stránky lze konfigurovat pomocí ikony nastavení v horní části obrazovky.</string>
 </resources>
