--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -772,4 +772,5 @@
     <string name="info_nothing_to_do">Rien à faire.</string>
     <string name="option_restore_cover">Restaurer l’image précédente</string>
     <string name="info_site_list">Les recherches sont limitées à : %1$s</string>
+    <string name="tip_configure_sites">Les sites web individuels peuvent être configurés à l\'aide de l\'icône des paramètres en haut de l\'écran.</string>
 </resources>
