--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -771,4 +771,5 @@
     <string name="info_nothing_to_do">Non c’è niente da fare.</string>
     <string name="option_restore_cover">Ripristinare l’immagine precedente</string>
     <string name="info_site_list">Le ricerche sono limitate a: %1$s</string>
+    <string name="tip_configure_sites">I singoli siti web possono essere configurati utilizzando l\'icona delle impostazioni nella parte superiore dello schermo.</string>
 </resources>
