--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1599,6 +1599,10 @@
     <string name="X_lbl_folder">Folder</string>
     <!-- endregion -->
 
+    <string name="lbl_sort_unsorted">Unsorted</string>
+    <string name="lbl_sort_ascending">Ascending</string>
+    <string name="lbl_sort_descending">Descending</string>
+
 
     <!--    <string name="confirm_strip_info_import_collection">Do you want to import all your owned comics from the StripInfo.be website? This could take some time. We strongly advice to take a backup before proceeding!</string>-->
 
